fixed alignment issue

--- a/main.css
+++ b/main.css
@@ -66,10 +66,6 @@
   
 
   @media screen and (min-width:480px) {
-    nav {
-      text-align: center;
-    }
-
     .hamburger {
       display: none;
     }
